@@ -2,30 +2,14 @@
 Hash: SHA256
 
 AUX 90libbluray 54 SHA256 6ecc4c3b7d343184f498e029f64ab77c6b779eda4934adef01ba6e00aa1e67bd SHA512 25b06f37e4ffc103eb28ebe26644cc9111f6dffed89e12488761e05e83a0c1719b4ffc1919f7b318d91b3797a9708b207c87b6c59dc7f77d1035b72a2b9fef7c WHIRLPOOL 3d1965aaabb3ae3cc7550d17849d94246ed9ec9706ef84ba2d44a88d390192b778911cb96b178963dc26c03be3112670167aecb476cc086961144b56d22fc368
-DIST libbluray-0.3.0-java.patch.bz2 16613 SHA256 491d510330aa0caa4c871ca4c740a6cbb7a0dfac034a503fd4ec7ecb7d0538ea SHA512 8019f76a12d2813e96ca1b0e44a274814ec16d6ea7d921fd8aba4622b27f23d4d2fc2079b51aa7c7750fb6ef408d360c5180c74affc84511520e655f9905504a WHIRLPOOL d47dcc2893c70e49a3e4b6c45fd4915e395d803ad8ce222cf9f72a46535dea2f4e7863d385ece39b3d02aadfd6fdbf8d29b9e63d50c09521544155a34c2ec467
-DIST libbluray-0.3.0.tar.bz2 510993 SHA256 dc73ad618052ddd2d72bb847c8e5b9a1c9175db7b18d0456b21f484836c30038 SHA512 96eedf23ff756e97fa64d9624a49608daccbac169714b9b231a284ed4eb63c77ee2ecbdfc42c311781571146cfa0fe340854ac831d3fe1312131e1742a4a7b02 WHIRLPOOL 524eb047f3d1995820282b89ea1e63ff88868b3d1cfaa7904da61b544e0127d9421ee158e0f6387a0bed8f88bb82dc85e1bb4f2926ed690e074a499ce5579305
-DIST libbluray-0.5.0.tar.bz2 559639 SHA256 19213e193e1abc5ed2de65edfb539deda1dbf6cc64dfef03e405524c9c6f7216 SHA512 bd709a01689bbb03ac291a2544eee93b47d72e065c8ccf825f9fb568ddb339a75a18c721b3c59fd4a8214a0f9b652cbd845bccd9de08248dd4cf61616a77e1dd WHIRLPOOL ab6b422889e6469053f567a489afe6c4cbf79cc1e56461ccad3eec948be819748da7760377686430db212a249b450da8fe5a9c914828f13354135dcf2e314add
-DIST libbluray-0.6.1.tar.bz2 586646 SHA256 bf51c4fb65f4d8b02e9b2708017ecd829c8d0dfa9239bca011e67a2a6e368b3f SHA512 f32f5ce238955efd8d9f34d488d89ca1f52b4dd1f63334ade92dc8e053b15e180549fc5f83f4b7d532c145acb1b8ddfca2230df65451bfb0f77bf6aa2c3806ec WHIRLPOOL bed882bef96effc81241eab736b6be4caa098fdb1e9e2c50bdb70ebfdf0ee53490aed6697bc298c5a8271547113e9c0de151b95198ca2db90733ea70adc4ad44
-EBUILD libbluray-0.3.0-r1.ebuild 2415 SHA256 2c2052985841bf068513eed0411aa9a303c80b278f6e2980a627a30262fb8bff SHA512 b01f07acc93017ed34c3cb7978dcbaf8f0a5c1b9f370b9f574896969bba766b69e8b7db181d42b7b828aaa90f111a84fb431c511e9bcc80b4c22abca7a03aaa0 WHIRLPOOL 3570b3b502951ad76ffe61902502e3ca581e922d66bf13e3dd2ffaaf0be485da6026f9bec26809dfd7c113202f0ec0cedc419c327ede40cdf42d57176fd1c7de
-EBUILD libbluray-0.5.0.ebuild 2170 SHA256 121cf9cdc64ef846494aab522af9076557ca8abfffe882036b0e31ccb526c821 SHA512 f5bbdaa958956b28861fb6e5d415a2289f867342e1d35b4f289ed7c84bdc7ce9d62dfdc3d724de3e8e867e7eec96b68bd076e5d969ee9ea153ef1e0518ec5d82 WHIRLPOOL 32df6ebdf135aa91e309e8ed7790dba75e25dce63bb3d5c597ae50201832bcaced0e36631131a564d8d133e1bc4a09f36fdf1e60ea0eec14f33bd7de6fe807c0
-EBUILD libbluray-0.6.1.ebuild 2493 SHA256 57af7246d24c71e83577b66349f00ff72f3e8d23141bc97d31a12911f1cf2b0c SHA512 bf8ab3f03a68e39d47f1cc708e9d334b1eec8e8a6955dc7222723001090fccd885a52a3b3376afdafd640d11d48b217c4e7f378511f807192f4a342ea4a4bf9c WHIRLPOOL 68af3bbdd2fb8d6b358ad509790ca6cb2ae6ff47701bda165e5873ac14b0b62ee018c097497b18eff580467e236dc0987f92096c4c25f4812563e3982b8aab0c
-EBUILD libbluray-9999.ebuild 1725 SHA256 f4d0703e7bda5464816830b6354bbaad536e425dad5b310bd826214791878a4c SHA512 7430656333bf0fdab1665bc92bbebc9415fb86b4557ec1fed73c84b646a5997ae061594dd6867ff90fc68be687138b6ef978ed6d6ec50f696e1229077a2ab272 WHIRLPOOL 0aec923fa962d97d3b64b930b979256a169e5b30cc7827740ed3be304587eb8702393fc46da6d60bbcc00f5efeaeca88f488f3ef584bc657e669784510f161ec
-MISC ChangeLog 8207 SHA256 9020146ee86aaa543e5b8673d2f676b78b299e8e482a347ce4ebd366b8b12f78 SHA512 da6d6819e802a530fbeeb42ce0fe513e01609f7534be3643c58063b20d19bda8a9657fc5de22cba4522a97b0c3364ebcd0207ca1c24a537158058c930ba59574 WHIRLPOOL 0eb1a517ebf39296ad400c8fc77f5d4c9963cee0ea5b18bccd6a761959d8cf0a5cc30d060efb627ecd14d644af9e85ed1aaac6985f22fa55673330356c4dda29
-MISC metadata.xml 365 SHA256 1e26491ee822ce3964caae3db5ea83b2461ac796acef0fcac546f58783ed21a4 SHA512 4328892ef4f4604340f03c55fb55aec4e4b5c1bf50f777b5746bca2ac7431d74ff387137040246f4c0f518538b7a170471e82b6673aa159fdf7f26b19f29c398 WHIRLPOOL 973b6892d3b3f16fd0c2774edd7091665c7d3574a99af6b9d7642292e4dee8fbbf100fb027613b320c8629b4b5d14190c65b3e6db2566b85d2fcad79f28d824d
+DIST libbluray-1.0.1.tar.bz2 719157 SHA256 0f9f9a1db2f48cafc70ed2596ff3594b597e2027408f5f2be6191c245d67853a SHA512 798d38cc95af87599af5838e5c288f2536a73b33191db8ff3774cf7eb5b835006bea83693f016d47dff551001b98527d8b1f14051f673fb3b28073b820e325d7 WHIRLPOOL 209b3e61b48af5350f952ee595ad6644d36205e9a8fa671c31bddc847f68e6969e3aaff96cc51752c9f54e5dacedf0b1ab1daa5fa508bda8bb85b2e66527878f
+EBUILD libbluray-1.0.1.ebuild 2425 SHA256 2223409d354ca1b786eac06b0289d012ec749500797f2aaff8da1925795aba4e SHA512 bcaa16f27194f339b1cf6c9c4c6bacc2905511127e9aebca8be83773efa629fd651405622d42266b0082648aeea079dee602a2d5eeb581f374f8b99e0a144a37 WHIRLPOOL b80a77bd5821aa7e37d2c44dad349206946b8d179ebd9fe7a2f2ca62db2d076a4507627b3a902a4a990c833531a85bc201e4b636311b2bf72b7ce2bc4a207039
+MISC ChangeLog 8517 SHA256 9ba5bdac9b1d207eca7deba6966e7b98871cb220d62671e293aca8f56054ba7e SHA512 ff31acb3a383e4e7bfa9146d8400ba8db4a46274eac6cc30fbbf0b801aad25147aa2c95d77076e9d8b54e39e6be5ce89e743379f2148a5b42164cd4cb06232e7 WHIRLPOOL 176f31eb36561dd0475bae15bae39963333d08d91602c055f94fbddb16a538aa97f3fe2e648b3ec90d0c06f28e6a99af4fc4e695f940a3098b7baa373b0259b6
+MISC metadata.xml 621 SHA256 d8f7718a3aac35c99323ef1cab9456b7fa1139782a240ffc32e586b25a37ba2d SHA512 815b2bdc883bb9e7d9d380d70ebc66f47fde686f9dc466ba2a4a19296f70df52323239bcece1f64dbc98f261c1bb27be7d7066754a253afba037f89c3147f9f5 WHIRLPOOL 7b8123184238eefb9ead4ed3f076a4b20c3db05f33525d03e4765c0ad33e431fadf1af5c46e354c0b1175a677314e3c2b6d692c5a168fa12c47c9a45858346c2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJT49ORAAoJEDuWpXgki9wH/JsP/3nBP4kcNMqGUpLK0rbF6nFH
-IQYMaHlDWVxz7bVo46jZfxYaZJdRitvdIiODRUHAzslc3UUANBx6K71th3R/o3TE
-3xh2hVlJCJ9Hr58quKFSNDk73Sfyp9DvWhBBZKS9cmJ1JcrFcPtgAjVxc15LscJC
-H5OfslOb75eP8LIDW++sFszXMd5iv5gT5GejfYEGZFPFw8V+JI/zHy5aE1R3aO9j
-1zXxin34M/Tu5hVOvApk/UkgUkPWgy58Wbvvsl20dTpXYBmbWlUGqxJwDpdp6+rK
-/Fjv3JTQIfB/WjJLA7vnEZoXVKF6xOeZ2wv7htBYUsynZdSUxlZP6q9q8LFEb0xC
-qyJvnueEL4piarNhWWiwJxmSu4SomkEJ0r4Vvfu523/p+XfNcVNGDm7hYPVV7/do
-Xx5U5mx4WBfxYWjxt8IhlvH5UZ2cdx9vTj3hYJyla5ksfYrEXM4FpMq1AM1fZj2B
-XIplaUZiCg9ifiuvaUtCLvyC0k2FX7DpBsy+q6V/DOD48dLiLL89PU0b5BD2OfI4
-UG+5rCTAURAqlOJFe2zZAlA3W9AcshWr68cNzhXr4ihlk0Hemm7Kh1c0oiLt90Is
-K3kGIslH9ubTQEmMEvFkNXpxIIWrj0SZM06dSptFNdiiEaFiJ+jIYB6AzFx17hQP
-HRBKuo96xhk45xgZn1tH
-=iHXC
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCWgnsKwAKCRDP2g+bNZZC
+ItxOAP9Aa2DKJlodq+BnRFs7O2stl7rlhbn25yBttkvUkt30/QEA79fUyN5tdw+i
+BI3bp5a2g5kCwT7mcriof79M4d3wGwM=
+=JWI9
 -----END PGP SIGNATURE-----
