@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>video</herd>
+  <maintainer type="project">
+    <email>media-video@gentoo.org</email>
+    <name>Gentoo Video project</name>
+  </maintainer>
   <use>
-    <flag name='aacs'>Add support for decryption of AACS</flag>
-    <flag name='java'>Add support for BD-J</flag>
-    <flag name='utils'>Install command-line utilities and examples</flag>
+    <flag name="aacs">Add support for decryption of AACS</flag>
+    <flag name="bdplus">Use <pkg>media-libs/libbdplus</pkg> for BD+ decryption</flag>
+    <flag name="java">Add support for BD-J</flag>
+	<flag name="udf">Add UDF (Universal Disk Format) support</flag>
+    <flag name="utils">Install command-line utilities and examples</flag>
   </use>
 </pkgmetadata>
